--- a/hsp3/hsp3_64.vcxproj.filters
+++ b/hsp3/hsp3_64.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClCompile Include="win32gui\stb_image.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="win32gui\supio_win.cpp">
+    <ClCompile Include="win32gui\supio_win_unicode.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -197,7 +197,7 @@
     <ClInclude Include="win32gui\stb_image.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="win32gui\supio_win.h">
+    <ClInclude Include="win32gui\supio_win_unicode.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
