--- a/package/win32/android/hspproj/AndroidManifest.xml
+++ b/package/win32/android/hspproj/AndroidManifest.xml
@@ -3,9 +3,10 @@
       package="com.example.hsptest1"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="18" />
 
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+	<uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name="tv.hsp.HspActivity"
 	          android:screenOrientation="portrait"
                   android:label="@string/app_name"
