HSP3Dishの不要なソースを削除 [HSP3Dish][Windows] エラー発生時にDebugウインドウが閉じないことがある不具合を修正 [HSP3Dish][Windows] onexit,onkey,onclick,oncmd命令による割り込みをサポート
Former-commit-id: bb2532e8e5428ee4ff5213d86b8f60eee40e68b1

--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="..\..\obaq\physics\rock.h" />
     <ClInclude Include="..\..\obaq\physics\vessel.h" />
     <ClInclude Include="..\geometry.h" />
+    <ClInclude Include="..\hgio.h" />
     <ClInclude Include="..\hsp3gr.h" />
     <ClInclude Include="..\hsp3gr_dish.h" />
     <ClInclude Include="..\hspwnd.h" />
@@ -219,6 +220,7 @@
     <ClInclude Include="..\sysreq.h" />
     <ClInclude Include="..\webtask.h" />
     <ClInclude Include="dxsnd.h" />
+    <ClInclude Include="hginc.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hgtex.h" />
     <ClInclude Include="hsp3dish.h" />
