システムの言語設定に応じてエラーメッセージを変更するように修正 [HGIMG4] 日本語を含むシステムのフォントを使用した文字列表示に対応 [HSP3Dish] 2D描画時の座標変換式を指定するviewcalc命令を追加
Former-commit-id: 77e05fddc3b461042a6af3faad2dc5915c07d7c7

--- a/hsp3dish/win32gp/hsp3gp.vcxproj
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj
@@ -295,6 +295,7 @@
     <ClCompile Include="gplgt.cpp" />
     <ClCompile Include="gpmat.cpp" />
     <ClCompile Include="gpphy.cpp" />
+    <ClCompile Include="gptexmes.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hsp3dish.cpp" />
     <ClCompile Include="main.cpp" />
@@ -335,11 +336,13 @@
     <ClInclude Include="gplgt.h" />
     <ClInclude Include="gpmat.h" />
     <ClInclude Include="gpphy.h" />
+    <ClInclude Include="gptexmes.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hsp3dish.h" />
     <ClInclude Include="hsp3extlib.h" />
     <ClInclude Include="hsp3ext_win.h" />
     <ClInclude Include="mmman.h" />
+    <ClInclude Include="shader_sprite.h" />
     <ClInclude Include="supio_win.h" />
     <ClInclude Include="webtask_win.h" />
   </ItemGroup>
