[HSP3Dish] hspdxプラグイン互換のスプライト命令を追加 [HGIMG4] 大きな画像のコピー時にUVが正しく反映されないことがある不具合を修正
Former-commit-id: 9395f6e1768b2de1befd0f8db6582b5ed76817c1

--- a/hsp3dish/win32gp/hsp3gp.vcxproj
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="..\..\hsp3\win32gui\hsp3extlib.cpp" />
     <ClCompile Include="..\..\hsp3\win32gui\hsp3ext_win.cpp" />
     <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
+    <ClCompile Include="..\essprite.cpp" />
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
     <ClCompile Include="..\hspwnd_dish.cpp" />
@@ -319,6 +320,7 @@
     <ClInclude Include="..\..\hsp3\supio.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_comobj.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_variant.h" />
+    <ClInclude Include="..\essprite.h" />
     <ClInclude Include="..\geometry.h" />
     <ClInclude Include="..\hsp3ext.h" />
     <ClInclude Include="..\hsp3gr.h" />
