--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
     <ClCompile Include="..\..\obaq\physics\rock.cpp" />
     <ClCompile Include="..\..\obaq\physics\vessel.cpp" />
+    <ClCompile Include="..\essprite.cpp" />
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
     <ClCompile Include="..\hspwnd_dish.cpp" />
@@ -206,6 +207,7 @@
     <ClInclude Include="..\..\obaq\physics\ptttypes.h" />
     <ClInclude Include="..\..\obaq\physics\rock.h" />
     <ClInclude Include="..\..\obaq\physics\vessel.h" />
+    <ClInclude Include="..\essprite.h" />
     <ClInclude Include="..\geometry.h" />
     <ClInclude Include="..\hgio.h" />
     <ClInclude Include="..\hsp3gr.h" />
