--- a/hsp3dish/win32/hsp3dish.vcxproj.filters
+++ b/hsp3dish/win32/hsp3dish.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="..\..\obaq\physics\vessel.cpp">
       <Filter>ソース ファイル\obaq</Filter>
     </ClCompile>
+    <ClCompile Include="..\essprite.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\hsp3\dpmread.h">
@@ -255,6 +258,9 @@
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
     <ClInclude Include="..\hgio.h">
+      <Filter>ヘッダー ファイル\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\essprite.h">
       <Filter>ヘッダー ファイル\core</Filter>
     </ClInclude>
   </ItemGroup>
