[HSP3Dish] フォント描画時の負荷を軽減 [HSP3Dish][Windows] フォント描画方法をHGIMG4と共通化
Former-commit-id: c09e1fc6b6879176ff72aa07a1c22da279f5398c

--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="..\obaq\omkedraw.cpp" />
     <ClCompile Include="..\random.cpp" />
     <ClCompile Include="..\sysreq.cpp" />
+    <ClCompile Include="..\texmes.cpp" />
     <ClCompile Include="dxsnd.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hgtex.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="..\random.h" />
     <ClInclude Include="..\supio.h" />
     <ClInclude Include="..\sysreq.h" />
+    <ClInclude Include="..\texmes.h" />
     <ClInclude Include="..\webtask.h" />
     <ClInclude Include="dxsnd.h" />
     <ClInclude Include="hginc.h" />
