--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="..\sysreq.cpp" />
     <ClCompile Include="..\texmes.cpp" />
     <ClCompile Include="dxsnd.cpp" />
+    <ClCompile Include="fontsystem.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hgtex.cpp" />
     <ClCompile Include="hsp3dish.cpp" />
@@ -224,6 +225,7 @@
     <ClInclude Include="..\texmes.h" />
     <ClInclude Include="..\webtask.h" />
     <ClInclude Include="dxsnd.h" />
+    <ClInclude Include="fontsystem.h" />
     <ClInclude Include="hginc.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hgtex.h" />
