win32版HSP3Dishの同期
Former-commit-id: 18809377bf6e196696d2506e7faaa7fda65d5cd2

--- a/hsp3dish/win32/hsp3dish.vcxproj.filters
+++ b/hsp3dish/win32/hsp3dish.vcxproj.filters
@@ -144,7 +144,7 @@
     <ClCompile Include="..\texmes.cpp">
       <Filter>ソース ファイル\core</Filter>
     </ClCompile>
-    <ClCompile Include="fontsystem.cpp">
+    <ClCompile Include="..\emscripten\fontsystem.cpp">
       <Filter>ソース ファイル\win</Filter>
     </ClCompile>
   </ItemGroup>
@@ -272,7 +272,7 @@
     <ClInclude Include="..\texmes.h">
       <Filter>ヘッダー ファイル\core</Filter>
     </ClInclude>
-    <ClInclude Include="fontsystem.h">
+    <ClInclude Include="..\emscripten\fontsystem.h">
       <Filter>ヘッダー ファイル\win</Filter>
     </ClInclude>
   </ItemGroup>
