--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
     <ClCompile Include="..\..\obaq\physics\rock.cpp" />
     <ClCompile Include="..\..\obaq\physics\vessel.cpp" />
+    <ClCompile Include="..\emscripten\fontsystem.cpp" />
     <ClCompile Include="..\essprite.cpp" />
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
@@ -181,7 +182,6 @@
     <ClCompile Include="..\sysreq.cpp" />
     <ClCompile Include="..\texmes.cpp" />
     <ClCompile Include="dxsnd.cpp" />
-    <ClCompile Include="fontsystem.cpp" />
     <ClCompile Include="hgiox.cpp" />
     <ClCompile Include="hgtex.cpp" />
     <ClCompile Include="hsp3dish.cpp" />
@@ -209,6 +209,7 @@
     <ClInclude Include="..\..\obaq\physics\ptttypes.h" />
     <ClInclude Include="..\..\obaq\physics\rock.h" />
     <ClInclude Include="..\..\obaq\physics\vessel.h" />
+    <ClInclude Include="..\emscripten\fontsystem.h" />
     <ClInclude Include="..\essprite.h" />
     <ClInclude Include="..\geometry.h" />
     <ClInclude Include="..\hgio.h" />
@@ -225,7 +226,6 @@
     <ClInclude Include="..\texmes.h" />
     <ClInclude Include="..\webtask.h" />
     <ClInclude Include="dxsnd.h" />
-    <ClInclude Include="fontsystem.h" />
     <ClInclude Include="hginc.h" />
     <ClInclude Include="hgiox.h" />
     <ClInclude Include="hgtex.h" />
