--- a/hsp3dish/win32gp/hsp3gp.vcxproj
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="..\..\hsp3\win32gui\hsp3extlib.cpp" />
     <ClCompile Include="..\..\hsp3\win32gui\hsp3ext_win.cpp" />
     <ClCompile Include="..\..\hsp3\win32gui\supio_win.cpp" />
+    <ClCompile Include="..\emscripten\fontsystem.cpp" />
     <ClCompile Include="..\essprite.cpp" />
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
@@ -289,7 +290,6 @@
     <ClCompile Include="..\sysreq.cpp" />
     <ClCompile Include="..\texmes.cpp" />
     <ClCompile Include="..\win32\dxsnd.cpp" />
-    <ClCompile Include="..\win32\fontsystem.cpp" />
     <ClCompile Include="..\win32\mmman.cpp" />
     <ClCompile Include="..\win32\webtask_win.cpp" />
     <ClCompile Include="gamehsp.cpp" />
@@ -321,6 +321,7 @@
     <ClInclude Include="..\..\hsp3\supio.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_comobj.h" />
     <ClInclude Include="..\..\hsp3\win32gui\hspvar_variant.h" />
+    <ClInclude Include="..\emscripten\fontsystem.h" />
     <ClInclude Include="..\essprite.h" />
     <ClInclude Include="..\geometry.h" />
     <ClInclude Include="..\hsp3ext.h" />
@@ -333,7 +334,6 @@
     <ClInclude Include="..\sysreq.h" />
     <ClInclude Include="..\texmes.h" />
     <ClInclude Include="..\webtask.h" />
-    <ClInclude Include="..\win32\fontsystem.h" />
     <ClInclude Include="dxsnd.h" />
     <ClInclude Include="gamehsp.h" />
     <ClInclude Include="gpcam.h" />
