--- a/hsp3dish/win32gp/hsp3gp.vcxproj.filters
+++ b/hsp3dish/win32gp/hsp3gp.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="..\emscripten\fontsystem.cpp">
       <Filter>ソース ファイル\win</Filter>
     </ClCompile>
+    <ClCompile Include="..\hspwnd_edit.cpp">
+      <Filter>ソース ファイル\core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dxsnd.h">
