--- a/hsp3dish/win32/hsp3dish.vcxproj
+++ b/hsp3dish/win32/hsp3dish.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="..\geometry.cpp" />
     <ClCompile Include="..\hsp3gr_dish.cpp" />
     <ClCompile Include="..\hspwnd_dish.cpp" />
+    <ClCompile Include="..\hspwnd_edit.cpp" />
     <ClCompile Include="..\hspwnd_obj.cpp" />
     <ClCompile Include="..\obaq\game.cpp" />
     <ClCompile Include="..\obaq\hsp3dw.cpp" />
